Add ATP React prototype and parser
Rename and wire up ATP demo, add interactive React prototype, and introduce a minimal ATP Python model.

- Renamed Concept_Demos/atp-prototype.html to Concept_Demos/atp_prototype.html and updated links in Concept_Demos/index.html and README.md.
- Added a new React prototype (Concept_Demos/atp_prototype.jsx) implementing an ATP message builder, agent routing, trust-decay visualization, and full workflow demo for stakeholder previews.
- Extended Concept_Demos/README.md with Vercel deployment instructions and short aliases for demo routes.
- Added a minimal server-side ATP implementation at src/agents/atp/__init__.py: enums, dataclasses (ATPMessage, ATPValidationResult), a simple ATPParser, and ATPValidator to support parsing/validation in tests and CLI demos.

These changes provide a self-contained browser demo and a lightweight Python parser/validator for integration and testing.

--- a/Concept_Demos/index.html
+++ b/Concept_Demos/index.html
@@ -208,7 +208,7 @@
             trust-aware routing, and view the trust decay model.
           </p>
           <div class="actions">
-            <a class="btn" href="atp-prototype.html">Open Prototype</a>
+            <a class="btn" href="atp_prototype.html">Open Prototype</a>
           </div>
         </article>
 
